Попытка выводить инфу о сертификате(покажу завтра)
кек

--- a/aspnetIE/aspnet/Views/Home/Index.cshtml
+++ b/aspnetIE/aspnet/Views/Home/Index.cshtml
@@ -71,11 +71,14 @@
                         <h3>Проверка подписи</h3>
 
                         <div>
-                            <textarea id="DataToVerifyTxtBox" name="DataToVerifyTxtBox" style="height:200px;width:100%;resize:none;border:1;"></textarea>
+                            @using (Html.BeginForm("Verify", "Home", FormMethod.Post))
+                            {
+                        <textarea id="DataToVerifyTxtBox" name="DataToVerifyTxtBox" style="height:200px;width:100%;resize:none;border:1;"></textarea>
 
-                            <button id="VerifyBtn" name="VerifyData" type="button" class="btn btn-light" onclick="Verify();">Проверить</button>
-
+                        <button id="VerifyBtn" name="VerifyData" type="button" class="btn btn-light" onclick="Verify();">Проверить</button>
+                        <button id="Verifybuton" name="VerifyData" type="submit" hidden class="btn btn-light">Проверить</button>
                             <p id="verify_msg" name="VerifyTitle"></p>
+                            }
                         </div>
                     </div>
 
