--- a/aspnetIE/aspnet/Views/Shared/_Layout.cshtml
+++ b/aspnetIE/aspnet/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <title> Пример использования КриптоПро ЭЦП Browser plug-in </title>
+    <title> Подпись XmlDSig </title>
     <meta name="robots" content="noindex, nofollow" charset="utf-8" />
     
     <script language="javascript" src="@Url.Content("~/Scripts/cadesplugin_api.js")"></script>
