вывод информации о сертификате

--- a/aspnetIE/aspnet/Views/Home/Index.cshtml
+++ b/aspnetIE/aspnet/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
                         <textarea id="DataToVerifyTxtBox" name="DataToVerifyTxtBox" style="height:200px;width:100%;resize:none;border:1;"></textarea>
 
                         <button id="VerifyBtn" name="VerifyData" type="button" class="btn btn-light" onclick="Verify();">Проверить</button>
-                        <button id="Verifybuton" name="VerifyData" type="submit" hidden class="btn btn-light">Проверить</button>
+                        <button id="Verifybuton" name="VerifyData" type="submit"  class="btn btn-light">Проверить1</button>
                             <p id="verify_msg" name="VerifyTitle"></p>
                             }
                         </div>
