--- a/aspnetIE/aspnet/Views/Home/Index.cshtml
+++ b/aspnetIE/aspnet/Views/Home/Index.cshtml
@@ -72,23 +72,34 @@
 
                         <div>
                             @using (Html.BeginForm("Verify", "Home", FormMethod.Post))
-    {
-                        <textarea id="DataToVerifyTxtBox" name="DataToVerifyTxtBox" style="height:200px;width:100%;resize:none;border:1;"></textarea>
+                            {
+                                <textarea id="DataToVerifyTxtBox" name="DataToVerifyTxtBox" style="height:200px;width:100%;resize:none;border:1;"></textarea>
 
-                        <button id="VerifyBtn" name="VerifyData" type="button" class="btn btn-light" onclick="Verify();">Проверить</button>
-                        <button id="Verifybuton" name="VerifyData" type="button" class="btn btn-light" onclick="Find_Cert();">Проверить сертификат</button>
-                        <p id="verify_msg" name="VerifyTitle"></p>
-}
-                            <div id="cert_info">
-                                <h3 id="cert_txt" style="visibility:hidden">Информация о сертификате</h3>
-                                <p class="info_field" id="subject"></p>
-                                <p class="info_field" id="issuer"></p>
-                                <p class="info_field" id="from"></p>
-                                <p class="info_field" id="till"></p>
-                                <p class="info_field" id="provname"></p>
-                                <p class="info_field" id="algorithm"></p>
-                                <p class="info_field" id="status"></p>
-                            </div>
+                                <button id="VerifyBtn" name="VerifyData" type="button" class="btn btn-light" onclick="Verify();">Проверить</button>
+                                <button id="Verifybuton" name="VerifyData" type="button" class="btn btn-light" onclick="Find_Cert();">Проверить сертификат</button>
+                                <p id="verify_msg" name="VerifyTitle"></p>
+                            }
+                            <input type="file" id="files" name="files[]" multiple />
+                            <output id="list"></output>
+
+                            <script>
+                                if (window.File && window.FileReader && window.FileList && window.Blob) {
+                                    // Great success! All the File APIs are supported.
+                                } else {
+                                    alert('Загрузка файлов не поддерживается данным браузером');
+                                }
+                                function handleFileSelect(evt) {
+                                    var files = evt.target.files; // FileList object
+                                    var output = [];
+                                    var reader = new FileReader();
+                                    for (var i = 0, f; f = files[i]; i++) {
+                                        reader.readAsText(f);
+                                        output.push = reader.result;
+                                    }
+                                    document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
+                                }
+                                document.getElementById('files').addEventListener('change', handleFileSelect, false);
+                            </script>
                         </div>
                     </div>
 
